deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
  labels:    
    app: httpserver
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:  
      app: httpserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    template:
      metadata: 
        creationTimestamp: null      
        labels:         
          app: httpserver    
      spec:
        containers:
          -env:
            - name: httpport
              valueFrom:
                apiVersion: v1
                kind: ConfigMap
                metadata:
                  name: myenv
                data:
                  key: httpport
            image: wangcloud.azurecr.io/httpserver:v0.0.1         
            imagePullSecrets:  IfNotPresent
            livenessProbe:
              failureThreshold: 3
              httpGet:
                path: /healthz
                port: 8000
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
            name: httpserver
            readinessProbe:
              failureThreshold: 3
              httpGet:
                path: /healthz
                port: 8000
                scheme: HTTP
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
            resources: 
              limits: 
                cpu: 200m
                memory: 100Mi
              requests:
                cpu: 20m
                memory: 20Mi
              terminationMessagePath: /dev/termination-log
              terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            imagePullSecrets:
              - name: wangcloud
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 30
