depoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      imagePullSecrets:
      - name: cloudnative
      containers:
      - name: httpserver
        image: wangcloud.azurecr.io/httpserver:v0.0.1
        ports:
        - containerPort: 8000
