init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpserver
spec:
  containers:
    - name: httpserver
      image: wangcloud.azurecr.io/httpserver:v0.0.1
      args:
        - /bin/sh
        - -c
        - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
      readinessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
      initialDelaySeconds: 30
      periodSeconds: 5
