liveness readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpserver
spec:
  containers:
    - env:
        - name: httpport
          valueFrom:
            configMapKeyRef:
              key: httpport
              name: myenv
      image: wangcloud.azurecr.io/httpserver:v0.0.1
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      name: httpserver
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthz
          port: 8000
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
