poststart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpserver
spec:
  containers:
    - name: httpserver
      image: wangcloud.azurecr.io/httpserver:v0.0.1
      lifecycle:
        postStart:
          exec:
            command: ["/bin/sh", "-c", "echo Hello from the httpserver handler > /usr/share/message"]
