svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: httpserver
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: httpserver
  type: ClusterIP
